feat(getNodeInfo) gets info about node by nodePubKey
